--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jest": "^29.7.0",
+    "lodash": "^4.17.21",
     "mongoose": "^6.8.4"
   },
   "devDependencies": {
